--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -3,11 +3,11 @@
 main .hero-container > div {
   max-width: unset;
 }
-  
+
 main .hero-container {
   padding: 0;
 }
-  
+
 main .hero {
   position: relative;
   padding: 32px;
@@ -15,10 +15,12 @@ main .hero {
 }
 
 main .hero h1 {
-  max-width: 1200px;
-  margin-left: auto;
+  max-width: 500px;
+  margin-left: 20px;
   margin-right: auto;
   color: white;
+  font-size: 40px;
+
 }
 
 main .hero picture {
