adding new block

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,7 +1,8 @@
 .columns > div {
   display: flex;
   flex-direction: column;
-  background-color: blue;
+  background-color: #28325A;
+  color:#ffffff;
 }
 
 .columns img {
