--- a/blocks/two-column-hero/two-column-hero.css
+++ b/blocks/two-column-hero/two-column-hero.css
@@ -1,44 +1,38 @@
-.two-column-hero-wrapper{
-  display: flex;
-  flex-direction: column;
-  background-color: #28325a;
-}
+
 /* block specific CSS goes here */
 
-main .hero-container > div {
-  max-width: unset;
+.two-column-hero > div {
+  display: flex;
+  flex-direction: column;
+  background-color: #28325A;
+  color:#ffffff;
 }
 
-main .hero-container {
-  padding: 0;
-}
-
-main .hero {
-  position: relative;
-  padding: 32px;
-  min-height: 300px;
-}
-
-main .hero h1 {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  color: white;
-}
-
-main .hero picture {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  object-fit: cover;
-  box-sizing: border-box;
-}
-
-main .hero img {
-  object-fit: cover;
+.two-column-hero img {
   width: 100%;
-  height: 100%;
+}
+
+.two-column-hero > div > div {
+  order: 1;
+}
+
+.two-column-hero > div > .two-column-hero-img-col {
+  order: 0;
+}
+
+.two-column-hero > div > .two-column-hero-img-col img {
+  display: block;
+}
+
+@media (min-width: 900px) {
+  .two-column-hero > div {
+    align-items: center;
+    flex-direction: unset;
+    gap: 32px;
+  }
+
+  .two-column-hero > div > div {
+    flex: 1;
+    order: unset;
+  }
 }
