--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,3 +1,8 @@
+.cards{
+
+}
+
+
 .cards > ul {
   list-style: none;
   margin: 0;
@@ -8,8 +13,12 @@
 }
 
 .cards > ul > li {
-  border: 1px solid var(--highlight-background-color);
-  background-color: var(--background-color)
+  /*border: 1px solid var(--highlight-background-color);
+  background-color: var(--background-color)*/
+  background-color: #fff;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 4px 1pc 0 hsla(0,0%,47%,.16);
+  box-shadow: 0 4px 1pc 0 hsla(0,0%,47%,.16);
 }
 
 .cards .cards-card-body {
