--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -22,6 +22,31 @@ main .hero h1 {
   font-size: 40px;
 
 }
+main .hero h2 {
+  max-width: 500px;
+  margin-left: 20px;
+  margin-right: auto;
+  color: white;
+  font-size: 24px;
+
+}
+
+main .hero h3 {
+  max-width: 500px;
+  margin-left: 20px;
+  margin-right: auto;
+  color: white;
+  font-size: 16px;
+
+}
+main .hero p {
+  max-width: 500px;
+  margin-left: 20px;
+  margin-right: auto;
+  color: white;
+  font-size: 14px;
+
+}
 
 main .hero picture {
   position: absolute;
