--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -10,8 +10,26 @@ main .hero-container {
 
 main .hero {
   position: relative;
-  padding: 32px;
-  min-height: 300px;
+  padding-top: 20px;
+  padding-bottom: 15px;
+}
+
+main .hero .topbar{
+  top: 80px;
+  background: #f2ecff;
+  color: #3f006d;
+  content: "";
+  background-size: contain;
+  padding:20px;
+}
+
+main .hero .topbar p{
+  color: #3f006d;
+}
+
+main .hero {
+  height:350px;
+
 }
 
 main .hero h1 {
@@ -40,10 +58,8 @@ main .hero h3 {
 
 }
 main .hero p {
-  max-width: 500px;
   margin-left: 20px;
   margin-right: auto;
-  color: white;
   font-size: 14px;
 
 }
