--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,31 +11,31 @@
  */
 
  :root {
-  /* colors */
-  --link-color: #035fe6;
-  --link-hover-color: #136ff6;
-  --background-color: #fff;
-  --overlay-background-color: #eee;
-  --highlight-background-color: #fff;
-  --text-color: #000;
+   /* fonts */
+   --heading-font-family: Overpass, sans-serif;
+   --body-font-family: Overpass, sans-serif;
+   --fixed-font-family: "Roboto Mono", menlo, consolas, "Liberation Mono", monospace;
 
-  /* fonts */
-  --body-font-family: 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
-  --heading-font-family: var(--body-font-family);
-  --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
+   /* colors */
+   --text-color: #4f535f;
+   --link-color: #4b9cd6;
+   --link-hover-color: #4b9cd6;
+   --background-color: #ffffff;
+   --overlay-background-color: #eeeeee;
+   --highlight-background-color: #ffffff;
 
-  /* body sizes */
-  --body-font-size-m: 22px;
-  --body-font-size-s: 18px;
-  --body-font-size-xs: 16px;
-
-  /* heading sizes */
-  --heading-font-size-xxl: 48px;
-  --heading-font-size-xl: 40px;
-  --heading-font-size-l: 32px;
-  --heading-font-size-m: 24px;
-  --heading-font-size-s: 20px;
-  --heading-font-size-xs: 18px;
+   /* sizes */
+   --heading-font-size-xxl: 14px;
+   --heading-font-size-xl: 14px;
+   --heading-font-size-l: 14px;
+   --heading-font-size-m: 14px;
+   --heading-font-size-s: 14px;
+   --heading-font-size-xs: 14px;
+   --body-font-size-xxl: 40px;
+   --body-font-size-xl: 20px;
+   --body-font-size-l: 18px;
+   --body-font-size-m: 16px;
+   --body-font-size-s: 14px;
 
   /* nav height */
   --nav-height: 64px;
@@ -68,7 +68,6 @@ body.appear {
 }
 
 header {
-  height: var(--nav-height);
 }
 
 h1, h2, h3,
@@ -91,6 +90,8 @@ h6 { font-size: var(--heading-font-size-xs) }
 p, dl, ol, ul, pre, blockquote {
   margin-top: 1em;
   margin-bottom: 1em;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 hr {
