adding top nav, setting footer bg color

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -195,7 +195,7 @@ header nav .nav-sections {
       justify-content: space-between;
       align-items: center;
       height: 30px;
-      margin-top:30px;
+      margin-top:0px;
 }
 
 header nav[aria-expanded="true"] .nav-sections {
@@ -217,6 +217,19 @@ header nav .nav-sections ul > li {
 
 header nav .nav-sections ul > li > ul {
   margin-top: 0;
+  border:4px dashed red;
+}
+
+header nav .nav-sections ul:nth-child(1){
+border:3px dotted green;
+margin-bottom: 20px;
+
+
+}
+header nav .nav-sections ul:nth-child(2){
+border:3px dotted blue;
+
+
 }
 
 header nav .nav-sections ul > li > ul > li {
