--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,32 @@ footer {
   padding: 2rem;
   background-color: #333b41;
   font-size: var(--body-font-size-s);
+  color:#ffffff;
+
+}
+.columns.footer  div :nth-child(2) {
+
+  background-color: #333b41;
+  margin-top:30px
+  display: table;
+  min-width: 400px;
+  float: right;
+  border:3px dashed green;
+  display:table;
+
+}
+
+.footer img{
+
+
+}
+.footer ul{
+    display: inline;
+    margin: auto;
+}
+.footer li {
+display: inline;
+margin: 20px;
 }
 
 footer .footer {
