--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
 
    /* colors */
    --text-color: #4f535f;
-   --link-color: #4b9cd6;
+   --link-color: #7c45ff;
    --link-hover-color: #4b9cd6;
    --background-color: #ffffff;
    --overlay-background-color: #eeeeee;
