--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -44,3 +44,27 @@ footer .footer {
 footer .footer p {
   margin: 0;
 }
+footer .sideButton{
+
+  color: #01675a;
+background-color: #669900;
+width: 35px;
+text-decoration: none;
+font-size: 16px;
+height: 260px;
+font-family: sans-serif;
+letter-spacing: 0;
+opacity: 1;
+display: flex;
+writing-mode: vertical-lr;
+writing-mode: tb-lr;
+vertical-align: middle;
+line-height: 2em;
+justify-content: center;
+position: fixed;
+top: 50%;
+right: 0;
+margin-top: -130px;
+z-index: 995;
+font-weight: bold;
+}
