changing button colors

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -46,7 +46,7 @@ footer .footer p {
 }
 footer .sideButton{
 
-  color: #01675a;
+  color: #002a25;
 background-color: #669900;
 width: 35px;
 text-decoration: none;
