--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,12 +1,17 @@
 .columns > div {
   display: flex;
   flex-direction: column;
-  background-color: #28325A;
-  color:#ffffff;
+  background-color: #ffffff;
+  color:#var(--text-color);
+  border: 2px dotted green;
 }
 
 .columns img {
   width: 100%;
+}
+.columns.block {
+
+  margin-top: 60px;
 }
 
 .columns > div > div {
