--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -1,6 +1,13 @@
 .table {
   width: 100%;
   overflow-x: auto;
+  border-radius: 10px;
+overflow: hidden;
+box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
+-moz-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
+-webkit-box-shadow: 0 0 40px 0 rgba(0,0,0,.15); 
+-o-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
+-ms-box-shadow: 0 0 40px 0 rgba(0,0,0,.15);
 }
 
 .table table {
@@ -21,18 +28,20 @@
     font-size: var(--body-font-size-m);
   }
 }
+.table table thead th{
 
+  background-color: #7c45ff;
+  color:#ffffff;
+}
 .table table thead tr {
   border-top: 2px solid;
-  border-bottom: 2px solid;
+background-color:  #dedede;
 }
 
-.table table tbody tr {
-  border-bottom: 1px solid;
-}
-
-.table table th {
+.table table tbody tr:nth-child(even)
+{
   font-weight: 700;
+  background-color: #f8f6ff;
 }
 
 .table table th, .table table td {
@@ -42,7 +51,7 @@
 
 /* striped variant */
 .table.striped tbody tr:nth-child(odd) {
-  background-color: var(--overlay-background-color);
+  background-color:  #efefef;
 }
 
 /* bordered variant */
