--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,6 @@
    /* colors */
    --text-color: #4f535f;
    --link-color: #7c45ff;
-  --link-color-footer: #ffffff;
    --link-hover-color: #4b9cd6;
    --background-color: #ffffff;
    --overlay-background-color: #eeeeee;
@@ -28,7 +27,8 @@
    /* sizes */
    --heading-font-size-xxl: 14px;
    --heading-font-size-xl: 14px;
-   --heading-font-size-l: 14px;
+   --heading-font-size-l:12px;
+;
    --heading-font-size-m: 14px;
    --heading-font-size-s: 14px;
    --heading-font-size-xs: 14px;
@@ -47,7 +47,8 @@
   :root {
     --heading-font-size-xxl: 60px;
     --heading-font-size-xl: 48px;
-    --heading-font-size-l: 36px;
+    --heading-font-size-l: 24px;
+;
     --heading-font-size-m: 30px;
     --heading-font-size-s: 24px;
     --heading-font-size-xs: 22px;
@@ -76,8 +77,8 @@ h4, h5, h6 {
   font-family: var(--heading-font-family);
   font-weight: 600;
   line-height: 1.25;
-  margin-top: 1em;
-  margin-bottom: .5em;
+  margin-left: 20px;
+  margin-right: 20px;
   scroll-margin: calc(var(--nav-height) + 1em);
 }
 
@@ -221,9 +222,14 @@ main img {
   height: 100%;
   width: 100%;
 }
+main .section  .hero{
+  padding: 64px 16px;
+  padding: 48px 32px;
+}
 
 main .section {
   padding: 64px 16px;
+  padding: 48px 32px;
 }
 
 @media (min-width: 600px) {
@@ -244,6 +250,5 @@ main .section.highlight {
   background-color: var(--highlight-background-color);
 }
 .two-column-hero block{
-
   background-color: #28325a;
 }
