creating new demo page

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -37,3 +37,11 @@
   position: relative;
   top: -13px;
 }
+.cards.demo-cards > ul > li img {
+  width: 100%;
+  height: auto;
+  display: inline-block;
+  left: -5px;
+  position: relative;
+  top: -13px;
+}
