--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -48,6 +48,25 @@ main .hero h2 {
   font-size: 24px;
 
 }
+main .hero.design-demo .button {
+  font-family: var(--body-font-family);
+display: inline-block;
+box-sizing: border-box;
+text-decoration: none;
+border: 2px solid transparent;
+padding: 5px 30px;
+text-align: center;
+font-style: normal;
+font-weight: 600;
+cursor: pointer;
+color: red;
+background-color: var(--link-color);
+margin: 16px 0;
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+border-radius: 30px;
+}
 
 main .hero h3 {
   max-width: 500px;
