--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -63,7 +63,7 @@
 
 @media (min-width: 900px) {
   .columns > div {
-    align-items: center;
+    align-items: normal;
     flex-direction: unset;
     gap: 32px;
   }
@@ -71,5 +71,6 @@
   .columns > div > div {
     flex: 1;
     order: unset;
+    margin-left: 60px;
   }
 }
