Revert "styles and links added for topNav adding flex to nav and uls. maybe broke buttons in header"
This reverts commit e36188e3909288346605b235739cadf4fdaa191a.

--- a/blocks/Topbar/Topbar.css
+++ b/blocks/Topbar/Topbar.css
@@ -1,4 +1,4 @@
-/*.topbar {
+.topbar {
   position: relative;
   z-index: 2;
   margin: 0;
@@ -29,4 +29,4 @@ header .topbar div:before {
 
 .topbar p {
   font-size: 14px;
-  }*/
+  }
