--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,8 +8,6 @@ header .nav-wrapper {
 
 header .topbar{
   position: relative;
-  display:flex;
-  justify-content:space-between;
   z-index: 2;
   margin: 0;
   padding: 0;
@@ -24,29 +22,11 @@ header .topbar{
   background-position: 0 0;
   border-top:2px solid grey;
   border-bottom:2px solid grey;
-  background: #444444;
-  color: #fff;
-
+  background: #f2ecff;
+  color: #3f006d;
+  margin-top:20px;
 
   }
-  header .topbar ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  background-color: unset;
-  width: unset;
-  font-size: 14px;
-  list-style: none;
-  padding-left: 0;
-}
-header .topbar li {
-margin: 0;
-font-size: 12px;
-margin-left:20px;
-margin-left:20px;
-list-style: none;
-padding-left: 0;
-}
 
 header .topbar img{
   margin-right:10px;
@@ -94,9 +74,9 @@ header nav[aria-expanded="true"] {
 
   }
 
-header nav[aria-expanded="true"] {
-  min-height: 0;
-  overflow: visible;
+  header nav[aria-expanded="true"] {
+    min-height: 0;
+    overflow: visible;
   }
 }
 
@@ -219,14 +199,13 @@ header nav .nav-brand img {
 header nav .nav-sections {
   width: 1075px;
   margin: auto;
-  display: flex;
-  /*display: none;*/
+  display: none;
   font-size: 15px;
   font-weight: 400;
   justify-content: space-between;
   align-items: center;
   height: 30px;
-  margin-top:20px;
+  margin-top:0px;
 }
 
 header nav[aria-expanded="true"] .nav-sections {
@@ -274,7 +253,7 @@ header nav .nav-sections :nth-child(1) :nth-child(4)  a:last-of-type {
   text-overflow: ellipsis;
   border-radius: 30px;
 }
-/*header nav .nav-sections :nth-child(1) :nth-child(5)  a:last-of-type{
+header nav .nav-sections :nth-child(1) :nth-child(5)  a:last-of-type{
   font-family: var(--body-font-family);
   box-sizing: border-box;
   text-decoration: none;
@@ -291,7 +270,7 @@ header nav .nav-sections :nth-child(1) :nth-child(4)  a:last-of-type {
   overflow: hidden;
   text-overflow: ellipsis;
   border-radius: 30px;
-}*/
+}
 
 
 header nav .nav-sections ul:nth-child(2){
@@ -347,7 +326,6 @@ header nav .nav-sections ul > li > ul > li {
 
   header nav .nav-sections ul {
     display: flex;
-    flex-direction: row;
     gap: 2em;
     margin: 0;
     font-size: var(--body-font-size-xs);
