fixing broken buttons styles for top bar item position adjustment in nav

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,8 +6,10 @@ header .nav-wrapper {
   position: fixed;
 }
 
-header .topbar{
+header .topbar {
   position: relative;
+  display:flex;
+  justify-content:space-between;
   z-index: 2;
   margin: 0;
   padding: 0;
@@ -22,17 +24,40 @@ header .topbar{
   background-position: 0 0;
   border-top:2px solid grey;
   border-bottom:2px solid grey;
-  background: #f2ecff;
-  color: #3f006d;
+  background: #444444;
+  color: #fff;
   margin-top:20px;
 
   }
+  header .topbar ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background-color: unset;
+    width: unset;
+    font-size: 14px;
+    list-style: none;
+    padding-left: 0;
+}
+header .topbar li {
+  margin: 0;
+  font-size: 12px;
+  margin-left:20px;
+  margin-left:20px;
+  list-style: none;
+  padding-left: 0;
+}
 
 header .topbar img{
   margin-right:10px;
   width: 24px;
   height: 19px;
 
+}
+header .topbar a:any-link {
+
+  color:#fff;
+    text-decoration: none;
 }
 
 header nav {
@@ -199,13 +224,13 @@ header nav .nav-brand img {
 header nav .nav-sections {
   width: 1075px;
   margin: auto;
-  display: none;
+  display: flex;
   font-size: 15px;
   font-weight: 400;
   justify-content: space-between;
   align-items: center;
   height: 30px;
-  margin-top:0px;
+  margin-top:20px;
 }
 
 header nav[aria-expanded="true"] .nav-sections {
@@ -288,7 +313,7 @@ header nav .nav-sections ul > li > ul > li {
     white-space: nowrap;
   }
 
-
+/* double not sure what this is for, maybe delete*/
   header nav .nav-sections {
     display: unset;
 }
@@ -326,6 +351,7 @@ header nav .nav-sections ul > li > ul > li {
 
   header nav .nav-sections ul {
     display: flex;
+    flex-direction: row;
     gap: 2em;
     margin: 0;
     font-size: var(--body-font-size-xs);
