--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -115,3 +115,16 @@ main .hero img {
   width: 100%;
   height: 100%;
 }
+
+a:link { /* Essentially means a[href], or that the link actually goes somewhere */
+  color: blue;
+}
+a:visited {
+  color: purple;
+}
+a:hover {
+  color: green;
+}
+a:active {
+  color: red;
+}
